--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,5 @@
 /__pycache__
 /*.log
 /data.sqlite3
-formular/__pycache__/__init__.cpython-38.pyc
+formular/__pycache__/
+postsofcompliments/__pycache__/
