--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,5 @@
 /__pycache__
 /*.log
 /data.sqlite3
-formular/__pycache__/
-postsofcompliments/__pycache__/
+/formular/__pycache__/
+/postsofcompliments/__pycache__/
